Added header and it's content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
-        <title>Pet activities</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Pet activities</title>
+  </head>
 
-    <body></body>
+  <body>
+    <header>
+      <img
+        src="/images/logo2.png"
+        alt="The logo of the page. An animal footprint"
+      />
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Live Demo</li>
+          <ul>
+            <li>Pets Boarding Services</li>
+            <li>Pets Toys and Food Shop</li>
+            <li>Pets Training School</li>
+          </ul>
+          <li>Live Demo Blocks</li>
+          <ul>
+            <li>Not appearing</li>
+            <li>In the</li>
+            <li>Example :)</li>
+          </ul>
+          <li>
+            <button>BUY NOW</button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
