--- a/index.html
+++ b/index.html
@@ -17,23 +17,63 @@
       <nav>
         <ul>
           <li>Home</li>
+
           <li>Live Demo</li>
           <ul>
             <li>Pets Boarding Services</li>
             <li>Pets Toys and Food Shop</li>
             <li>Pets Training School</li>
           </ul>
+
           <li>Live Demo Blocks</li>
           <ul>
             <li>Not appearing</li>
             <li>In the</li>
             <li>Example :)</li>
           </ul>
+
           <li>
             <button>BUY NOW</button>
           </li>
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section>
+        <div>
+          <h1>PET ACTIVITIES</h1>
+          <p>Take a closer look</p>
+        </div>
+
+        <button>VIEW ALL</button>
+      </section>
+
+      <div>
+        <section>
+          <img
+            src="/images/01.jpg"
+            alt="A cute little puppy with a toy in his mouth"
+          />
+          <h2>ACTIVITIES</h2>
+          <p>Toys Playtime</p>
+        </section>
+
+        <section>
+          <img src="/images/02.jpg" alt="A cat covered by a blanket" />
+          <h2>ACTIVITIES</h2>
+          <p>Active Rest</p>
+        </section>
+
+        <section>
+          <img
+            src="/images/03.jpg"
+            alt="A dog running happily in a grass field"
+          />
+          <h2>ACTIVITIES</h2>
+          <p>Game Walks</p>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
