--- a/index.html
+++ b/index.html
@@ -9,69 +9,76 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <img
         src="/images/logo2.png"
         alt="The logo of the page. An animal footprint"
+        class="logo"
       />
-      <nav>
+      <nav class="navigation">
         <ul>
           <li>Home</li>
 
           <li>Live Demo</li>
-          <ul>
+          <ul class="foldable">
             <li>Pets Boarding Services</li>
             <li>Pets Toys and Food Shop</li>
             <li>Pets Training School</li>
           </ul>
 
           <li>Live Demo Blocks</li>
-          <ul>
+          <ul class="foldable">
             <li>Not appearing</li>
             <li>In the</li>
             <li>Example :)</li>
           </ul>
 
           <li>
-            <button>BUY NOW</button>
+            <button class="buy">BUY NOW</button>
           </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div>
-          <h1>PET ACTIVITIES</h1>
-          <p>Take a closer look</p>
+      <section class="titleField">
+        <div class="titleText">
+          <h1 class="title">PET ACTIVITIES</h1>
+          <p class="titleAdvice">Take a closer look</p>
         </div>
 
-        <button>VIEW ALL</button>
+        <button class="titleButton">VIEW ALL</button>
       </section>
 
-      <div>
-        <section>
+      <div class="cards">
+        <section class="card card1">
           <img
             src="/images/01.jpg"
             alt="A cute little puppy with a toy in his mouth"
+            class="cardImg cardImg1"
           />
-          <h2>ACTIVITIES</h2>
-          <p>Toys Playtime</p>
+          <h2 class="cardTitle">ACTIVITIES</h2>
+          <p class="cardText">Toys Playtime</p>
         </section>
 
-        <section>
-          <img src="/images/02.jpg" alt="A cat covered by a blanket" />
-          <h2>ACTIVITIES</h2>
-          <p>Active Rest</p>
+        <section class="card card2">
+          <img
+            src="/images/02.jpg"
+            alt="A cat covered by a blanket"
+            class="cardImg cardImg3"
+          />
+          <h2 class="cardTitle">ACTIVITIES</h2>
+          <p class="cardText">Active Rest</p>
         </section>
 
-        <section>
+        <section class="card card3">
           <img
             src="/images/03.jpg"
             alt="A dog running happily in a grass field"
+            class="cardImg cardImg3"
           />
-          <h2>ACTIVITIES</h2>
-          <p>Game Walks</p>
+          <h2 class="cardTitle">ACTIVITIES</h2>
+          <p class="cardText">Game Walks</p>
         </section>
       </div>
     </main>
