Fixed foldable lists <ul> childs positioning

--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
         <ul>
           <li>Home</li>
 
-          <li>Live Demo</li>
-          <ul class="foldable">
-            <li>Pets Boarding Services</li>
-            <li>Pets Toys and Food Shop</li>
-            <li>Pets Training School</li>
-          </ul>
+          <li>
+            Live Demo
+            <ul class="foldable">
+              <li>Pets Boarding Services</li>
+              <li>Pets Toys and Food Shop</li>
+              <li>Pets Training School</li>
+            </ul>
+          </li>
 
-          <li>Live Demo Blocks</li>
-          <ul class="foldable">
-            <li>Not appearing</li>
-            <li>In the</li>
-            <li>Example :)</li>
-          </ul>
+          <li>
+            Live Demo Blocks
+            <ul class="foldable">
+              <li>Not appearing</li>
+              <li>In the</li>
+              <li>Example :)</li>
+            </ul>
+          </li>
 
           <li>
             <button class="buy">BUY NOW</button>
