Added an ul>li to nav and moved previous elements inside it

--- a/index.html
+++ b/index.html
@@ -25,28 +25,33 @@
       />
       <nav class="navigation">
         <ul>
-          <li>Home</li>
+          <li class="menu">
+            ≡
+            <ul>
+              <li>Home</li>
 
-          <li>
-            Live Demo
-            <ul class="foldable">
-              <li>Pets Boarding Services</li>
-              <li>Pets Toys and Food Shop</li>
-              <li>Pets Training School</li>
+              <li>
+                Live Demo
+                <ul class="collapsible">
+                  <li>Pets Boarding Services</li>
+                  <li>Pets Toys and Food Shop</li>
+                  <li>Pets Training School</li>
+                </ul>
+              </li>
+
+              <li>
+                Live Demo Blocks
+                <ul class="collapsible">
+                  <li>Not appearing</li>
+                  <li>In the</li>
+                  <li>Example :)</li>
+                </ul>
+              </li>
+
+              <li>
+                <button class="buy">BUY NOW</button>
+              </li>
             </ul>
-          </li>
-
-          <li>
-            Live Demo Blocks
-            <ul class="foldable">
-              <li>Not appearing</li>
-              <li>In the</li>
-              <li>Example :)</li>
-            </ul>
-          </li>
-
-          <li>
-            <button class="buy">BUY NOW</button>
           </li>
         </ul>
       </nav>
