Added a hover interaction to the menu and added classes to the index.html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
       <nav class="navigation">
         <ul>
           <li class="menu">
-            ≡
-            <ul>
-              <li>Home</li>
+            <div class="menuSymbol">≡</div>
 
-              <li>
+            <ul>
+              <li class="menuMobile">Home</li>
+
+              <li class="menuMobile">
                 Live Demo
                 <ul class="collapsible">
                   <li>Pets Boarding Services</li>
@@ -39,7 +40,7 @@
                 </ul>
               </li>
 
-              <li>
+              <li class="menuMobile">
                 Live Demo Blocks
                 <ul class="collapsible">
                   <li>Not appearing</li>
@@ -48,7 +49,7 @@
                 </ul>
               </li>
 
-              <li>
+              <li class="menuMobile">
                 <button class="buy">BUY NOW</button>
               </li>
             </ul>
