Added media queries && added stylesheet stylePC.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" media="(max-width: 800px)" href="style.css" />
+    <link rel="stylesheet" href="stylePc.css" />
     <title>Pet activities</title>
   </head>
 
