Updated index.html  && stylePC.css set everything

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" media="(max-width: 800px)" href="style.css" />
     <link rel="stylesheet" href="stylePc.css" />
+    <link rel="shortcut icon" href="/images/logo2.png" type="image/x-icon" />
     <title>Pet activities</title>
   </head>
 
@@ -25,35 +26,31 @@
         class="logo"
       />
       <nav class="navigation">
-        <ul>
-          <li class="menu">
-            <div class="menuSymbol">≡</div>
+        <p class="menuSymbol">≡</p>
 
-            <ul>
-              <li class="menuMobile">Home</li>
+        <ul class="menuElements">
+          <li class="menuMobile">Home</li>
 
-              <li class="menuMobile">
-                Live Demo
-                <ul class="collapsible">
-                  <li>Pets Boarding Services</li>
-                  <li>Pets Toys and Food Shop</li>
-                  <li>Pets Training School</li>
-                </ul>
-              </li>
-
-              <li class="menuMobile">
-                Live Demo Blocks
-                <ul class="collapsible">
-                  <li>Not appearing</li>
-                  <li>In the</li>
-                  <li>Example :)</li>
-                </ul>
-              </li>
-
-              <li class="menuMobile">
-                <button class="buy">BUY NOW</button>
-              </li>
+          <li class="menuMobile">
+            Live Demo
+            <ul class="collapsible">
+              <li>Pets Boarding Services</li>
+              <li>Pets Toys and Food Shop</li>
+              <li>Pets Training School</li>
             </ul>
+          </li>
+
+          <li class="menuMobile">
+            Live Demo Blocks
+            <ul class="collapsible">
+              <li>Not appearing</li>
+              <li>In the</li>
+              <li>Example :)</li>
+            </ul>
+          </li>
+
+          <li class="menuMobile">
+            <button class="buy">BUY NOW</button>
           </li>
         </ul>
       </nav>
