--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <link rel="stylesheet" media="(max-width: 800px)" href="style.css" />
     <link rel="stylesheet" href="stylePc.css" />
-    <link rel="shortcut icon" href="/images/logo2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/logo2.png" type="image/x-icon" />
     <title>Pet activities</title>
   </head>
 
   <body>
     <header class="header">
       <img
-        src="/images/logo2.png"
+        src="./images/logo2.png"
         alt="The logo of the page. An animal footprint"
         class="logo"
       />
@@ -69,7 +69,7 @@
       <div class="cards">
         <section class="card card1">
           <img
-            src="/images/01.jpg"
+            src="./images/01.jpg"
             alt="A cute little puppy with a toy in his mouth"
             class="cardImg cardImg1"
           />
@@ -79,7 +79,7 @@
 
         <section class="card card2">
           <img
-            src="/images/02.jpg"
+            src="./images/02.jpg"
             alt="A cat covered by a blanket"
             class="cardImg cardImg3"
           />
@@ -89,7 +89,7 @@
 
         <section class="card card3">
           <img
-            src="/images/03.jpg"
+            src="./images/03.jpg"
             alt="A dog running happily in a grass field"
             class="cardImg cardImg3"
           />
